# ai-remediation-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ai-remediation.yml  ci.yml
ai/: fix_bug.py
app/: app.py  calculator.py
scripts/: notify_slack.py
settings/: mcp.json
tests/: test_app.py  test_calculator.py
